<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
        android:background="@color/colorPrimary"
        android:gravity="center"
        android:text="@string/app_name"
        android:textAppearance="?android:textAppearanceMedium"
        android:textColor="@color/dmds_white" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="#282196F3"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/size_l">

            <TextView
                android:id="@+id/tv_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/selected_document"
                android:textAppearance="?android:textAppearanceMedium" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_selected_document"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center_vertical" />

                <Button
                    android:id="@+id/btn_change"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/change" />
            </LinearLayout>

            <Spinner
                android:id="@+id/s_barcode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:entries="@array/barcode_array" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/size_l"
                android:text="@string/settings"
                android:textAppearance="?android:textAppearanceMedium" />

            <android.support.v7.widget.SwitchCompat
                android:id="@+id/sw_custom_overlay"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/size_l"
                android:text="@string/use_custom" />

            <android.support.v7.widget.SwitchCompat
                android:id="@+id/sw_face_detection"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/size_m"
                android:text="@string/use_face_detection" />

            <android.support.v7.widget.SwitchCompat
                android:id="@+id/sw_fallback"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/size_m"
                android:text="@string/fallback_to_edge" />

            <android.support.v7.widget.SwitchCompat
                android:id="@+id/sw_document_cropping"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/size_m"
                android:text="@string/document_cropping" />

            <android.support.v7.widget.SwitchCompat
                android:id="@+id/sw_edge_cropping"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/size_m"
                android:text="@string/edge_cropping" />

            <android.support.v7.widget.SwitchCompat
                android:id="@+id/sw_vertical_scan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/size_m"
                android:text="@string/vertical_scan" />

            <TextView
                android:id="@+id/tv_aspect_ratio_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/size_l"
                android:text="@string/aspect_ratio" />

            <LinearLayout
                android:id="@+id/ll_aspect_ratio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <android.support.v7.widget.AppCompatSeekBar
                    android:id="@+id/sb_aspect_ratio"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:max="1000"
                    android:padding="@dimen/size_m" />

                <TextView
                    android:id="@+id/tv_aspect_ratio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:minWidth="30dp" />
            </LinearLayout>

            <TextView
                android:id="@+id/tv_physical_height_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/size_l"
                android:text="@string/physical_height" />

            <LinearLayout
                android:id="@+id/ll_physical_height"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <android.support.v7.widget.AppCompatSeekBar
                    android:id="@+id/sb_physical_height"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:max="1000"
                    android:padding="@dimen/size_m" />

                <TextView
                    android:id="@+id/tv_physical_height"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:minWidth="30dp" />
            </LinearLayout>

            <TextView
                android:id="@+id/tv_portrait_tolerance_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/size_l"
                android:text="@string/portrait_tolerance" />

            <LinearLayout
                android:id="@+id/ll_portrait_tolerance"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <android.support.v7.widget.AppCompatSeekBar
                    android:id="@+id/sb_portrait_tolerance"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:max="100"
                    android:padding="@dimen/size_m" />

                <TextView
                    android:id="@+id/tv_portrait_tolerance"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:minWidth="30dp" />
            </LinearLayout>

            <TextView
                android:id="@+id/tv_landscape_tolerance_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/size_l"
                android:text="@string/landscape_tolerance" />

            <LinearLayout
                android:id="@+id/ll_landscape_tolerance_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <android.support.v7.widget.AppCompatSeekBar
                    android:id="@+id/sb_landscape_tolerance"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:max="100"
                    android:padding="@dimen/size_m" />

                <TextView
                    android:id="@+id/tv_landscape_tolerance"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:minWidth="30dp" />
            </LinearLayout>

            <TextView
                android:id="@+id/tv_stable_detections_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/size_l"
                android:text="@string/stable_detections" />

            <LinearLayout
                android:id="@+id/ll_stable_detections_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <android.support.v7.widget.AppCompatSeekBar
                    android:id="@+id/sb_stable_detections"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:max="20"
                    android:padding="@dimen/size_m" />

                <TextView
                    android:id="@+id/tv_stable_detections"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:minWidth="30dp" />
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/size_l"
                android:text="@string/scan_duration" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <android.support.v7.widget.AppCompatSeekBar
                    android:id="@+id/sb_scan_duration"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:max="600"
                    android:padding="@dimen/size_m" />

                <TextView
                    android:id="@+id/tv_scan_duration"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:minWidth="30dp" />
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/size_l"
                android:text="@string/dpi" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <android.support.v7.widget.AppCompatSeekBar
                    android:id="@+id/sb_dpi"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:max="300"
                    android:padding="@dimen/size_m" />

                <TextView
                    android:id="@+id/tv_dpi"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:minWidth="30dp" />
            </LinearLayout>


        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/btn_begin_scan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/size_m"
        android:text="@string/begin" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_app_version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:padding="@dimen/size_l" />

        <TextView
            android:id="@+id/tv_sdk_version"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="right"
            android:padding="@dimen/size_l" />
    </LinearLayout>

</LinearLayout>
