<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#19F3DB00"
    android:padding="@dimen/size_l">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">



        <TextView
            android:id="@+id/tv_face"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/face_image"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/iv_face"
            android:layout_width="170dp"
            android:layout_height="170dp"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/size_l"
            android:adjustViewBounds="true"
            android:src="@android:drawable/ic_menu_report_image" />

        <TextView
            android:id="@+id/tv_processed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/size_l"
            android:text="@string/dewarped_image"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/iv_dewarped_doc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/size_l"
            android:adjustViewBounds="true"
            android:src="@android:drawable/ic_menu_report_image" />

        <TextView
            android:id="@+id/tv_unprocessed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/size_l"
            android:text="@string/full_frame_image"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/iv_full_frame"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/size_l"
            android:adjustViewBounds="true"
            android:src="@android:drawable/ic_menu_report_image" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/size_l"
            android:text="@string/ocr_data"
            android:textStyle="bold" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.v7.widget.RecyclerView
                android:id="@+id/result_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clipToPadding="false"
                app:layoutManager="android.support.v7.widget.LinearLayoutManager"
                android:nestedScrollingEnabled="false" />

            <TextView
                android:id="@+id/empty_list"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/fab_margin"
                android:text="@string/empty_view"
                android:visibility="gone" />
        </FrameLayout>

        <Button
            android:id="@+id/btnNext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Next" />

    </LinearLayout>
</android.support.v4.widget.NestedScrollView>
