<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/black"
    tools:context="com.fawri.b3g.id.doc.customoverlay.CustomScanActivity">

    <com.daon.dmds.views.DaonDocumentScanView
        android:id="@+id/custom_scan_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    </com.daon.dmds.views.DaonDocumentScanView>

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="15dp">

        <LinearLayout
            android:id="@+id/ll_scanning"
            android:layout_width="match_parent"
            android:layout_height="233dp"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="50dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toTopOf="@id/gl_constraint"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/scanning_rect"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.5"
                android:background="@drawable/scan_rect"
                android:contentDescription="Scan region, result image1" />

            <ImageView
                android:id="@+id/scanning_rect2"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.5"
                android:background="@drawable/scan_rect"
                android:contentDescription="Result image2"
                android:visibility="gone" />
        </LinearLayout>

        <android.support.constraint.Guideline
            android:id="@+id/gl_constraint"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.5" />

        <LinearLayout
            android:id="@+id/message_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:background="@drawable/white_background"
            android:orientation="horizontal"
            android:paddingStart="20dp"
            android:paddingEnd="10dp"
            app:layout_constraintBottom_toTopOf="@id/button_container"
            app:layout_constraintTop_toBottomOf="@id/gl_constraint">

            <LinearLayout
                android:id="@+id/message_layer"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.8"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/message_header"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:text="Message Header"
                    android:textSize="22dp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/message_content"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/message_header"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:text="Message label"
                    android:textSize="18dp" />
            </LinearLayout>

            <TextView
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_gravity="center"
                android:background="@drawable/passport_image"
                android:padding="5dp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/button_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent">

            <TextView
                android:id="@+id/btn_details"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_gravity="bottom"
                android:layout_marginBottom="@dimen/size_m"
                android:background="@drawable/red_background"
                android:gravity="center"
                android:text="@string/custom_ui_details"
                android:textColor="@android:color/white"
                android:textSize="20dp" />

            <TextView
                android:id="@+id/btn_scan"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_gravity="bottom"
                android:background="@drawable/red_background"
                android:gravity="center"
                android:text="@string/custom_ui_scan"
                android:textColor="@android:color/white"
                android:textSize="20dp" />

            <TextView
                android:id="@+id/btn_scan_again"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_gravity="bottom"
                android:background="@drawable/red_background"
                android:gravity="center"
                android:text="@string/custom_ui_scan_again"
                android:textColor="@android:color/white"
                android:textSize="20dp"
                android:visibility="gone" />

            <TextView
                android:id="@+id/btn_cancel"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_gravity="bottom"
                android:gravity="center"
                android:text="@string/cancel_txt"
                android:textColor="@color/color_red2"
                android:textSize="20dp" />
        </LinearLayout>
    </android.support.constraint.ConstraintLayout>

    <TextView
        android:id="@+id/upper_left_dot"
        android:layout_width="10dp"
        android:layout_height="10dp"
        android:background="@drawable/detect_dot" />

    <TextView
        android:id="@+id/upper_right_dot"
        android:layout_width="10dp"
        android:layout_height="10dp"
        android:background="@drawable/detect_dot" />

    <TextView
        android:id="@+id/lower_left_dot"
        android:layout_width="10dp"
        android:layout_height="10dp"
        android:background="@drawable/detect_dot" />

    <TextView
        android:id="@+id/lower_right_dot"
        android:layout_width="10dp"
        android:layout_height="10dp"
        android:background="@drawable/detect_dot" />

</FrameLayout>